# platform-orchestrator

./: .clinerules  .gitignore  .project-meta.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  config.py  db.py  db_pg.py  feature_gates.yaml  main.py  orchestrator.db  pyproject.toml
auto_exec/: __init__.py  memory.py  models.py  orchestrator.py  parallel.py
blocks/: __init__.py  compose_block.py  image_gen_block.py  optimizer_block.py  splitter_block.py  tts_block.py
docs/: ARCHITECTURE.md  DESIGN.md  PRD-REVIEW-2026-07-02.md  PRD.md  architecture-v2.md  design-provider-router.md  membership-design.md
engine/: __init__.py  block.py  errors.py  executor.py  graph.py
middleware/: __init__.py  auth.py  feature_gate.py  rate_limit.py
models/: __init__.py  auth_models.py
providers/: __init__.py  fallback_provider.py  registry.py
references/: architecture.md  quality-gates.md  testing.md
routers/: __init__.py  admin_users.py  aggregator.py  auth.py  dashboard.py  jobs.py  payment.py  prompt.py  provider_admin.py  provider_user.py  publish.py  splitter.py  trending.py  usage.py  user_settings.py  video.py  viral.py  web.py
scripts/: e2e_smoke_test.sh  ecs-monitor.sh  migrate_users.py  start-dev.sh
services/: __init__.py  bilibili_publisher.py  collect.py  compositor.py  concurrency_control.py  douyin_publisher.py  image_service.py  lifecycle.py  pipeline.py  pipeline_v2.py  prompt_service.py  provider_router.py  publish_service.py  quota.py  rewrite.py  subscription_lifecycle.py  tencent_video_publisher.py  tts_service.py  video_service.py  (+4 more)
(+50 files in other folders)
