[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "platform-orchestrator"
version = "0.1.0"
description = "Thin-shell FastAPI orchestrator for the content-to-video pipeline"
authors = [{name = "Colinchiu007"}]
requires-python = ">=3.10"
dependencies = [
    "shared-models",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.27.0",
    "aiosqlite>=0.20.0",
    "pyyaml>=6.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.setuptools.packages.find]
include = ["main*", "config*", "db*", "routers*", "services*", "middleware*", "engine*", "blocks*"]

[tool.ruff.lint]
select = ["F", "E", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "strict"
python_files = ["test_*.py"]
